--- a/travel-diary-frontend/package.json
+++ b/travel-diary-frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.8.2",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "travel-diary-frontend": "file:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
