--- a/requirements.txt
+++ b/requirements.txt
@@ -41,5 +41,8 @@ tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.1
 
+# node == v22.14.0
+# npm == 10.8.3
+
 # How to install the requirements.txt file
 # pip install -r requirements.txt
