--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://gollog:epirute17@localhost/travel_diary_db
+sqlalchemy.url = postgresql://travel_user:travel_password@localhost:5432/travel_diary
 
 
 [post_write_hooks]
